MeowFeat - Melhorias de filtros >.< ajustes para imagens no README tambem
